--- a/package.json
+++ b/package.json
@@ -13,12 +13,14 @@
   "dependencies": {
     "bcrypt": "^6.0.0",
     "body-parser": "^2.2.2",
+    "cloudinary": "^2.9.0",
     "cors": "^2.8.6",
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
     "httpserver": "^0.3.0",
     "jsonwebtoken": "^9.0.3",
     "mongodb": "^7.0.0",
+    "multer": "^2.0.2",
     "socket.io": "^4.8.3",
     "ws": "^8.19.0"
   }
