--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "jsonwebtoken": "^9.0.3",
     "mongodb": "^7.0.0",
     "multer": "^2.0.2",
+    "nodemailer": "^8.0.1",
     "socket.io": "^4.8.3",
     "ws": "^8.19.0"
   }
