change to oauth

--- a/package.json
+++ b/package.json
@@ -15,9 +15,10 @@
     "body-parser": "^2.2.2",
     "cloudinary": "^2.9.0",
     "cors": "^2.8.6",
+    "dns": "^0.1.2",
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
-    "httpserver": "^0.3.0",
+    "httpserver": "^0.0.5",
     "jsonwebtoken": "^9.0.3",
     "mongodb": "^7.0.0",
     "multer": "^2.0.2",
